Add specialised parser

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
 
         <title>Offline RSS Reader</title>
         <link href="main.css" rel="stylesheet">
+        <script src="parser.js" defer></script>
         <script src="feedfinder.js" defer></script>
         <script src="main.js" defer></script>
     </head>
