Add periodic polling.

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
         <link href="main.css" rel="stylesheet">
         <script src="parser.js" defer></script>
         <script src="feedfinder.js" defer></script>
+        <script src="db.js" defer></script>
         <script src="main.js" defer></script>
     </head>
     <body>
