--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
         <script src="parser.js" defer></script>
         <script src="feedfinder.js" defer></script>
         <script src="db.js" defer></script>
+        <script src="poll.js" defer></script>
         <script src="main.js" defer></script>
     </head>
     <body>
