Add sidebars and article lists

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
         <script src="parser.js" defer></script>
         <script src="feedfinder.js" defer></script>
         <script src="db.js" defer></script>
+        <script src="view.js" defer></script>
         <script src="poll.js" defer></script>
         <script src="main.js" defer></script>
     </head>
@@ -20,6 +21,10 @@
                     <li><a href="#single-article">Single Article</a></li>
                     <li><a href="#feed-list">All Feeds</a></li>
                     <li><a href="#add-feed">Add Feed</a></li>
+                </ul>
+
+                <ul id="sidebar-feeds">
+
                 </ul>
             </aside>
             <main id="article-list">Article List</main>
