Add article view.

--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,8 @@
         <div class="wrapper">
             <aside>
                 <ul>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#article-list">Article List</a></li>
-                    <li><a href="#single-article">Single Article</a></li>
                     <li><a href="#feed-list">All Feeds</a></li>
                     <li><a href="#add-feed">Add Feed</a></li>
                 </ul>
