Update feed adder ui process

--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,9 @@
                     </fieldset>
                     <button id="add-feed-btn">Add Feed</button>
                 </form>
+                <section id="feed-options"></section>
             </main>
         </div>
+        <div id="loader"><p></p></div>
     </body>
 </html>
