Add routing functionality

--- a/static/index.html
+++ b/static/index.html
@@ -5,21 +5,22 @@
         <meta name="viewport" content="width=device-width">
 
         <title>Offline RSS Reader</title>
-        <link href="main.css" rel="stylesheet">
-        <script src="parser.js" defer></script>
-        <script src="feedfinder.js" defer></script>
-        <script src="db.js" defer></script>
-        <script src="view.js" defer></script>
-        <script src="poll.js" defer></script>
-        <script src="main.js" defer></script>
+        <link href="/main.css" rel="stylesheet">
+        <script src="/parser.js" defer></script>
+        <script src="/feedfinder.js" defer></script>
+        <script src="/db.js" defer></script>
+        <script src="/view.js" defer></script>
+        <script src="/poll.js" defer></script>
+        <script src="/router.js" defer></script>
+        <script src="/main.js" defer></script>
     </head>
     <body>
         <div class="wrapper">
             <aside>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="#feed-list">All Feeds</a></li>
-                    <li><a href="#add-feed">Add Feed</a></li>
+                    <li><a href="/feed-list">All Feeds</a></li>
+                    <li><a href="/add-feed">Add Feed</a></li>
                 </ul>
 
                 <ul id="sidebar-feeds">
