Create trie data structure for search.

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
         <script src="/view.js" defer></script>
         <script src="/poll.js" defer></script>
         <script src="/router.js" defer></script>
+        <script src="/search.js" defer></script>
         <script src="/main.js" defer></script>
     </head>
     <body>
