Refactor db functions to model functions.

--- a/static/index.html
+++ b/static/index.html
@@ -7,13 +7,15 @@
         <title>Offline RSS Reader</title>
         <link rel="preload" as="font" crossorigin href="/webfonts/fa-solid-900.woff2">
         <link href="/main.css" rel="stylesheet">
+        <script src="/radix.js" defer></script>
         <script src="/parser.js" defer></script>
         <script src="/feedfinder.js" defer></script>
+        <script src="/app.js" defer></script>
         <script src="/db.js" defer></script>
+        <script src="/model.js" defer></script>
         <script src="/view.js" defer></script>
         <script src="/poll.js" defer></script>
         <script src="/router.js" defer></script>
-        <script src="/search.js" defer></script>
         <script src="/main.js" defer></script>
     </head>
     <body>
