Refactor sidebar to MVC

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
         <script src="/app.js" defer></script>
         <script src="/db.js" defer></script>
         <script src="/model.js" defer></script>
+        <script src="/controller.js" defer></script>
         <script src="/view.js" defer></script>
         <script src="/poll.js" defer></script>
         <script src="/router.js" defer></script>
