Remove and add click listeners to sidebar links.

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
         <title>Offline RSS Reader</title>
         <link rel="preload" as="font" crossorigin href="/webfonts/fa-solid-900.woff2">
         <link href="/main.css" rel="stylesheet">
-        <script src="/output-20241022-120125.js" defer></script>
+        <script src="/output-20241022-140821.js" defer></script>
     </head>
     <body>
         <div class="wrapper">
@@ -87,5 +87,8 @@
                 </form>
             </div>
         </div>
+        <script>
+            document.addEventListener("DOMContentLoaded", async (e) => { await app.init(); }, false);
+        </script>
     </body>
 </html>
