--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,10 @@
         <meta name="viewport" content="width=device-width">
 
         <title>Offline RSS Reader</title>
-        <link rel="preload" as="font" crossorigin href="/webfonts/fa-solid-900.woff2">
+        <link rel="preload" as="font" crossorigin href="/webfonts/fa-solid-subset-900.woff2">
+        <link rel="preload" as="font" crossorigin href="/webfonts/fa-solid-subset-900.ttf">
         <link href="/main.css" rel="stylesheet">
-        <script src="/output-20241104-181720.js" defer></script>
+        <script src="/output-20241106-184101.js" defer></script>
     </head>
     <body>
         <div class="wrapper">
