Add meta description.

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        <meta name="description" content="A browser-based RSS Reader that works offline">
 
         <title>Offline RSS Reader</title>
         <link rel="preload" as="font" crossorigin href="/webfonts/fa-solid-subset-900.woff2">
